This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - added json export for availability data
          - added noexternalforks parameter to skip forks
          - Bug Fixes
            - fixed js error in conf tool

1.62     Sun Jan  6 21:20:16 CET 2013
          - added filter to comments / downtimes page
          - added json / excel export to comments / downtimes page
          - moved plugins config items in component sections of config
          - changed first day of week to monday, can be reverted by setting first_day_of_week=0
          - reworked configuration documentation
          - new reporting module
            - put both reports edit steps into one page
            - select multiple hosts/services/groups seperated by comma
            - changed report templates to html
            - changed to flot graphing library
            - changed to wkhtml2pdf as pdf generator
            - changed default initial state to unspecified
            - added timeperiod support in sla reports
            - added html preview of pdf reports
            - added new report option for sla decimal points and graph min sla
            - added pnp graph to reports
          - Bug Fixes
            - fixed problem when using logfilecache in combination with connection pool

1.60.2   Wed Dec 19 11:23:28 CET 2012
          - Bug Fixes
            - hide site panel with only one backend

1.60     Tue Dec 18 18:26:47 CET 2012
          - added http backend type which connects to another thruk instance
          - made sitepanel configurable
          - config tool:
            - changed source editor to linedtextarea because of IE compatibility
          - logcache:
            - renamed logcache cli commands
            - changed mongodb logcache to seperate collection per backend
            - added cli command logcachestats to display logcache statistics