@@ -17372,6 +17372,8 @@ logfile cache:</p></div>
 
 <div class='toclevel4'><a href='#_show_modified_attributes'>show_modified_attributes</a></div>
 
+<div class='toclevel4'><a href='#_show_host_attempts'>show_host_attempts</a></div>
+
 <div class='toclevel4'><a href='#_perf_bar_mode'>perf_bar_mode</a></div>
 
 <div class='toclevel4'><a href='#_shown_inline_pnp'>shown_inline_pnp</a></div>
@@ -18089,6 +18091,14 @@ Choose between popup, inline and off</p></div>
 <div class="literalblock">
 <div class="content">
 <pre><tt>show_modified_attributes = 1</tt></pre>
+</div></div>
+<h4 id="_show_host_attempts">show_host_attempts</h4>
+<div class="paragraph"><p>Show check attempts for hosts too. The default is to show
+them on the problems page only. Use this value to force a value.</p></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>show_host_attempts = 1</tt></pre>
 </div></div>
 <h4 id="_perf_bar_mode">perf_bar_mode</h4>
 <div class="paragraph"><p>This option enables a performance bar inside the status/host list which
@@ -19411,7 +19421,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-01-08 17:39:28 CEST
+Last updated 2013-01-11 11:46:37 CEST
 </div>
 </div>
 </body>
