@@ -251,6 +251,10 @@ shown_inline_pnp = 1
 # show if a host / service has modified attributes.
 show_modified_attributes = 1
 
+# Show check attempts for hosts too. The default is to show
+# them on the problems page only. Use this value to force a value.
+#show_host_attempts = 1
+
 
 ######################################
 # Command Settings
@@ -544,4 +548,3 @@ cookie_auth_session_cache_timeout = 5
     # 'parent', 'address', 'domain', 'hostgroup', 'servicegroup'
     #default_groupby = address
 </Component>
-
