@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 next:
           - added json export for availability data
           - added noexternalforks parameter to skip forks
+          - added show_host_attempts config option
           - Bug Fixes
             - fixed js error in conf tool
 
